# MojaveAdventure

./: .clippy.toml  .gitignore  AGENT_7_HANDLERS_TESTS_REPORT.md  AI_SETUP_COMPLETE.txt  API.md  ARCHITECTURE.md  BUILD_SUCCESS.txt  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  INTEGRATION_TEST_REPORT.md  LAUNCH_GAME.bat  PERFORMANCE.md  PHASE_6_COMPLETION_REPORT.md  PULL_REQUEST_SUMMARY.md  QUICKSTART.md  README.md  RECOMMENDED_CI_WORKFLOW.yml  RUST_IMPROVEMENTS_RESEARCH.md  TESTING.md  TUI_CHARACTER_SHEET.md  TUI_SAVE_SYSTEM_IMPLEMENTATION.md  build_output.txt  config.toml  deny.toml  run.bat  run.sh  setup_llama.md  sonar-project.properties  tarpaulin.toml  test_ai_servers.ps1  test_stream.ps1
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml  rust.yml
benches/: ai_benchmarks.rs  combat_benchmarks.rs  worldbook_benchmarks.rs
examples/: basic_game.rs  character_creation.rs  combat_simulation.rs  worldbook_demo.rs
llama-cpp/: start-both.bat  start-cydonia.bat  start-hermes.bat  start-server.bat  start-server.sh  test-prompt.json  test-prompt2.json
scripts/: install-hooks.ps1  install-hooks.sh
src/: config.rs  error.rs  lib.rs  main.rs  templates.rs  validation.rs  validation_garde.rs
src/ai/: cache.rs  extractor.rs  mod.rs  server_manager.rs
src/game/: char_handlers.rs  character.rs  combat.rs  combat_handlers.rs  conversation.rs  handlers.rs  items.rs  mod.rs  persistence.rs  rolls.rs  stat_allocator.rs  story_manager.rs  tui_game_loop.rs  worldbook.rs
src/game/items/: armor.rs  consumables.rs  database.rs  mod.rs  types.rs  weapons.rs
src/tui/: animations.rs  app.rs  combat_display.rs  events.rs  mod.rs  narrative.rs  settings_editor.rs  settings_ui.rs  theme.rs  ui.rs  worldbook_browser.rs  worldbook_ui.rs
src/ui/: mod.rs
templates/: context.tera  extractor.tera  system_prompt.tera
tests/: .combat_tests.rs.pending-snap  .worldbook_tests.rs.pending-snap  ai_test_helpers.rs  character_tests.rs  combat_tests.rs  config_tests.rs  error_path_tests.rs  handlers_tests.rs  helpers.rs  integration_tests.rs  item_tests.rs  persistence_tests.rs  property_tests.rs  regression_tests.rs  stat_allocator_tests.rs  story_manager_tests.rs  tui_tests.rs  validation_integration.rs  worldbook_tests.rs
