[package]
name = "fallout-dnd"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime for llama.cpp HTTP calls
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Serialization for save/load
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for dice rolls
rand = "0.8"

# CLI arguments and config
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colored terminal output
colored = "2.1"

# Date and time for worldbook timestamps
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
