[package]
name = "fallout-dnd"
version = "0.1.0"
edition = "2021"

[features]
default = ["mimalloc-alloc"]
mimalloc-alloc = ["mimalloc"]

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.29"

# Async runtime for llama.cpp HTTP calls
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Serialization for save/load
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for dice rolls
rand = "0.9"

# Config
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Colored terminal output
colored = "3.0"

# Date and time for worldbook timestamps
chrono = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# AI token counting for accurate context management
tiktoken-rs = "0.5"

# Template engine for AI prompts
tera = "1.20"

# Declarative validation framework
garde = { version = "0.20", features = ["derive"] }

# Regular expressions for text cleanup
regex = "1.10"

# Lazy static initialization
once_cell = "1.20"

# High-performance memory allocator (optional for Miri compatibility)
mimalloc = { version = "0.1", optional = true }

# Performance optimizations
smallvec = { version = "1.11", features = ["serde"] }
smartstring = { version = "1.0", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
serial_test = "3.2"
insta = { version = "1.40", features = ["json", "yaml", "redactions"] }
divan = "0.1"

[[bench]]
name = "combat_benchmarks"
harness = false

[[bench]]
name = "worldbook_benchmarks"
harness = false

[[bench]]
name = "ai_benchmarks"
harness = false

[profile.release]
debug = true  # Enable debug symbols for flamegraph
